# playgroud

./: .gitignore
2048_c++/: CMakeLists.txt
2048_c++/include/: const.h  variable.h  world.h
2048_c++/lib/: pdcurses.lib
2048_c++/src/: main.c  variable.c  world.c
calculator/: CMakeLists.txt
calculator/include/: calculation.h
calculator/src/: calculation.c  main.c
rnn_poem_generator/: process.py  read.py  readme.md  train.py  util.py
rnn_poem_generator(abandoned)/: model.py  test.py
rnn_poem_generator(abandoned)/config/: config.yaml  word_id_dict.txt
rnn_poem_generator/config/: config.yaml  word_id_dict.txt
rnn_poem_generator/dataset/: vocabulary_list.txt
